#1203 Update terminology to DTM (digital terrain model)
